# diff_fem

./: .gitignore  pyproject.toml
src/diff_fem/: __init__.py  __main__.py  mesh2d.py  testfem.py
